Design header and Create div structure

--- a/index.html
+++ b/index.html
@@ -20,25 +20,35 @@
             </ul>
         </div>
     </div>
-    <div class="hero">
-        <div class="left">
+    <div class ="body">    
+        <div class="hero">
+            <div class="left">
+                <div class="herotitle">
+                    This website is awesome
+                </div>
+                <div class="herocontent">
+                    This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast
+                </div>
+                <div class="herosignup">
 
+                </div>
+            </div>
+            <div class="right">
+                placeholder
+            </div>
         </div>
-        <div class="right">
-
+        <div class="information">
+            placeholder
         </div>
-    </div>
-    <div class="information">
-
-    </div>
-    <div class="quote">
-
-    </div>
-    <div class="signup">
-
+        <div class="quote">
+            placeholder
+        </div>
+        <div class="signup">
+            placeholder
+        </div>
     </div>
     <div class="footer">
-        
+        placeholder
     </div>
 
 
